# galdrar

./: .gitignore  Cargo.toml  README.md  build_and_dotfile_it.sh
src/: lyrics.rs  main.rs  songstate.rs  utils.rs
