[package]
name = "galdrar"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

lyric_finder = "0.2.0"
futures = "0.3"

serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0"

chrono = "0.4.3"
regex = "1.12"